feat: 新增目标页面和管理员页面组件
refactor: 重构认证存储逻辑并添加权限管理

style: 优化登录页面输入框样式和文档格式

fix: 修复注册页面参数传递问题

perf: 优化报告页面数据计算性能

docs: 更新技术文档格式和内容

chore: 添加加载状态组件和游戏页面基础结构

--- a/.trae/documents/小学英语学习平台-技术架构文档.md
+++ b/.trae/documents/小学英语学习平台-技术架构文档.md
@@ -29,31 +29,40 @@ graph TD
 ```
 
 ## 2. Technology Description
-- 前端：Vue 3 + Ant Design Vue 4.x + Vite + TypeScript
-- 状态管理：Pinia
-- 路由：Vue Router 4
-- 后端服务：Supabase (提供数据库、认证、实时功能)
-- 样式：Less + Ant Design Vue 主题定制
-- 图表库：Apache ECharts (用于学习数据可视化)
+
+* 前端：Vue 3 + Ant Design Vue 4.x + Vite + TypeScript
+
+* 状态管理：Pinia
+
+* 路由：Vue Router 4
+
+* 后端服务：Supabase (提供数据库、认证、实时功能)
+
+* 样式：Less + Ant Design Vue 主题定制
+
+* 图表库：Apache ECharts (用于学习数据可视化)
 
 ## 3. Route definitions
-| Route | Purpose |
-|-------|---------|
-| / | 首页，显示学习概览和功能导航 |
-| /login | 登录页面，用户身份验证 |
-| /register | 注册页面，新用户账户创建 |
-| /games | 游戏学习页，关卡选择和游戏界面 |
-| /games/:levelId | 具体游戏关卡页面 |
-| /progress | 进度跟踪页，学习统计和积分系统 |
-| /assessment | 能力评估页，英语水平测试 |
-| /assessment/result | 评估结果展示页 |
-| /reports | 学习报告页，数据分析和可视化 |
-| /profile | 个人中心页，用户信息和设置管理 |
+
+| Route              | Purpose         |
+| ------------------ | --------------- |
+| /                  | 首页，显示学习概览和功能导航  |
+| /login             | 登录页面，用户身份验证     |
+| /register          | 注册页面，新用户账户创建    |
+| /games             | 游戏学习页，关卡选择和游戏界面 |
+| /games/:levelId    | 具体游戏关卡页面        |
+| /progress          | 进度跟踪页，学习统计和积分系统 |
+| /assessment        | 能力评估页，英语水平测试    |
+| /assessment/result | 评估结果展示页         |
+| /reports           | 学习报告页，数据分析和可视化  |
+| /profile           | 个人中心页，用户信息和设置管理 |
 
 ## 4. API definitions (Supabase 数据库交互)
+
 ### 4.1 核心数据类型
 
 用户相关
+
 ```typescript
 interface User {
   id: string;
@@ -77,6 +86,7 @@ interface StudentProfile {
 ```
 
 学习相关
+
 ```typescript
 interface GameLevel {
   id: string;
@@ -110,7 +120,9 @@ interface Assessment {
 ```
 
 ## 5. Data model
+
 ### 5.1 Data model definition
+
 ```mermaid
 erDiagram
     USERS ||--o{ STUDENT_PROFILES : has
@@ -181,7 +193,9 @@ erDiagram
 ```
 
 ### 5.2 Data Definition Language
+
 用户表 (users)
+
 ```sql
 -- 创建用户表
 CREATE TABLE users (
@@ -281,3 +295,4 @@ INSERT INTO game_levels (name, difficulty, category, unlock_points, content) VAL
 ('听力练习', 'medium', 'listening', 150, '{"audio_files": ["hello.mp3", "goodbye.mp3"], "type": "audio_match"}'),
 ('阅读理解', 'hard', 'reading', 200, '{"passages": ["short_story_1"], "type": "reading_comprehension"}');
 ```
+
